spacing fixes

--- a/src/assets/css/responsive.scss
+++ b/src/assets/css/responsive.scss
@@ -120,6 +120,10 @@ $value_eight: 480px;
     }
   }
 
+  .about-description {
+    padding-top: 20px;
+  }
+
   .home-banner,
   .home-banner-project,
   .home-banner-profile {
